syntax = "proto3";

package v2ray.core.transport.internet.hysteria2;
option csharp_namespace = "V2Ray.Core.Transport.Internet.Hysteria2";
option go_package = "github.com/v2fly/v2ray-core/v5/transport/internet/hysteria2";
option java_package = "com.v2ray.core.transport.internet.hysteria2";
option java_multiple_files = true;

import "common/protoext/extensions.proto";

message Congestion{
  string type = 1;

  uint64 up_mbps = 2;
  uint64 down_mbps = 3;
}

message Config {
  option (v2ray.core.common.protoext.message_opt).type = "transport";
  option (v2ray.core.common.protoext.message_opt).short_name = "hysteria2";

  string password = 3;
  Congestion congestion = 4;
  bool ignore_client_bandwidth = 5;
  bool use_udp_extension = 6;
}
